[package]
name = "netpub"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
rosrust = {path="../rosrust/rosrust"}
rosrust_msg = {path="../rosrust/rosrust_msg"}
serde = "1.0.127"
serde_derive = "1.0.127"
serde_json = "1.0.116"
